# txt2tags-ports

./: .gitignore  LICENSE  README.md  pyproject.toml  txt2tags3
targets/: __init__.py
targets/aat/: input.txt
targets/aatw/: input.html
targets/adoc/: input.adoc
targets/bbcode/: input.txt
targets/creole/: input.txt
targets/csv/: Data.csv
targets/dbk/: input.xml
targets/doku/: input.txt
targets/gmi/: input.gmi
targets/gwiki/: input.wiki
targets/html/: input.html
targets/html5/: input.html
targets/htmls/: input.html
targets/lout/: input.lout
targets/man/: input.1
targets/md/: input.md
targets/mgp/: input.mgp
targets/moin/: input.txt
targets/mom/: input.mom
targets/pm6/: input.txt
targets/pmw/: input.txt
targets/red/: input.txt
targets/rst/: input.rst
targets/rtf/: input.rtf
targets/sgml/: input.sgml
targets/spip/: input.txt
targets/tex/: input.tex
targets/tml/: input.txt
targets/txt/: input.txt
targets/txt2t/: input.t2t
targets/utmac/: input.utmac
targets/vimwiki/: input.txt
targets/wiki/: input.wiki
targets/wp/: input.html
targets/xhtml/: input.xhtml
targets/xhtmls/: input.xhtml
tests/: input.t2t  input_table.t2t  regenerate_targets.py  test_regression.py
txt2tags3_mod/: __init__.py  __main__.py  aa.py  cli.py  config.py  constants.py  converter.py  gui.py  output.py  processing.py  regexes.py  rules.py  state.py  tags.py  usage.py  utils.py
txt2tags3_mod/targets/: aap.py  aapp.py  aapw.py  aas.py  aasw.py  aat.py  aatw.py  adoc.py  bbcode.py  creole.py  (+35 more)
txt2tags_perl/: Makefile.PL  cpanfile
(+22 files in other folders)
